issue #23- adding padding-top and bottom of 0px for both the icons growth and research to remove uneven sizing in dropdown menu

--- a/css/ncbs-responsive.css
+++ b/css/ncbs-responsive.css
@@ -100,6 +100,15 @@ padding:1px;
 background-position: 0 -25px;
 }
 
+#themes-dropdown-growth{
+	padding-top:0px;
+	padding-bottom:0px;
+}
+
+#themes-dropdown-research{
+	padding-top:0px;
+	padding-bottom:0px;
+}
 
 
 
